# ChangeLog for app-laptop/tlp
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Sep 2014; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild
  - use $MY_CONFFILE in pkg_preinst()
  - use TLP_WITH_SYSTEMD

  24 Sep 2014; Andre Erdmann <dywi@mailerd.de> tlp-0.5-r2.ebuild
  - don't hardcode /etc/tlp.conf in pkg_preinst(), use $MY_CONFFILE instead
  - "fix" comment regarding RESTRICT=mirror

*tlp-9999 (15 Sep 2014)
*tlp-0.5-r2 (15 Sep 2014)

  15 Sep 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.5-r2.ebuild,
  +tlp-9999.ebuild, +files/pm-blacklist.0 +files/tlp-init.openrc, metadata.xml
  Added a live ebuild and another revision for 0.5:
  - both: wrt to github issue #5, added a "deprecated" USE flag,
    which controls whether thinkpad-radiosw gets installed or not.
    The ebuild does no longer print a warning about ACPI_PROC_EVENT if this
    flag is disabled. acpid is a USE-dependent runtime dep now.
  - both: use pm-blacklist/init script from FILESDIR
  - 0.5-r2: drop git requirement, get upstream source tarball from github
  - 0.5-r2: changed SRC_URI for gentoo-additions=>gentoo-patches

  04 Aug 2014; Andre Erdmann <dywi@mailerd.de> tlp-0.5-r1.ebuild
  Try to copy/hardlink /etc/conf.d/tlp->/etc/tlp.conf during
  pkg_preinst() when upgrading from < 0.5-r1

  04 Aug 2014; Andre Erdmann <dywi@mailerd.de> tlp-0.4.1.ebuild
  Fix file header (copyright 2013->2014)

*tlp-0.5-r1 (20 May 2014)

  24 Mar 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.5-r1.ebuild
  Changed config file location to /etc/tlp.conf (zhou13; github issue #4)
  Replaced symlinks in /etc/pm/power.d with a single file in /etc/pm/config.d
  Masked.

*tlp-0.5 (24 Mar 2014)

  24 Mar 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.5.ebuild
  Latest upstream release

*tlp-0.4.1 (02 Jan 2014)

  02 Jan 2014; Andre Erdmann <dywi@mailerd.de> tlp-0.4.1.ebuild
  Latest upstream release, mostly containing compat changes.

*tlp-0.4-r1 (15 Dec 2013)
