@@ -2,16 +2,19 @@ AUX fix-run-on-ac-bat.patch 1481 SHA256 ee316777bebb36783eb9ec2c3d151a17383eb98b
 AUX pm-blacklist.0 354 SHA256 0b2ca4b40e26a20db9e04909efcd3b1f3f18ca09f018f9e4646eafa5973e2f48 SHA512 e4e02f3e1b1b93ae94c2e4bbad1e8449ab929e9f41a489315df1e79c8888500928ebcd138d87f2fb0bcaa90a6acb40c6c3df418e576894039c11298f106032de WHIRLPOOL a390eef0bb88329788720bde971cbd0bb6b5f1bc2d066165a9ca01bc7ae017ff7226f432f7c948b7ee2ff33db8b1561aefe65afd82c6a517265b90361cb3815a
 AUX tlp-init.openrc 499 SHA256 432428177e4ef4de32120e4b465313bab25e7722d9afcfb36a86b0f6ca218680 SHA512 213dc8ddd0bfd424700e179d5d22aae1832a623e220dcee9f7d38481f12ef36fe315b1273af755a4ff538a404d66d2830db5aa9e48829b8d0aaa7c0c725ba2c0 WHIRLPOOL 7f3e44424442fbf3a4b710a10c52eeda4b0a0963cfb16479213450fc3590132e542e99e45a670fc5dcf73c99a37cfd6aed3af563e2ce9c894dc810863da0c5f0
 DIST tlp-0.5.tar.gz 56149 SHA256 e535e53c340a1af2ea72f0de8a2ffbfc5f832a4e29c391a4052ab1d783c5c157 SHA512 937f65816722e11d7ccaa667ccb471252d54913f0b29a05d88e266535ff5e157eab86f573a590286647a6b321c923be830603e760a7414bce463faa65cb3fd81 WHIRLPOOL f8b1a7b4e96cd7af8a81ecd17c9389a3ae37d83b16c0b13f890e000837a64edf8962dea073425e34dcf3be9507f2103acea5f7e8ac8cd5331193fc036515880f
+DIST tlp-0.6.tar.gz 58141 SHA256 31d05d249aa83a6e43e94cee9f307f37c59934bbf7a37a87adf05cf74073cfe5 SHA512 fc122079795f7711b3f1546832ac644f17a386185e0b9bd86d16687ac16e33b819aebee9613c83f06b462690f10a3213fe927f8ce2796f7156dd2ced825078e6 WHIRLPOOL fafd0be1bf40991c1cf04e2cc69b5f123ad1dd5e04d19b6f0ceb27b6c8eff9c903f6dd4f435d1420da2bedee587d54abedd9fe29a4285faba4dffeba7e4ab2cb
 DIST tlp-gentoo-additions-0.4.tar.bz2 6005 SHA256 2a88298350a2f6238ec7e2d12518f89940a54916dd5beff202a2514ce01a61d4 SHA512 4105232c4844e14d7d35464575d2a36ce87cc40b2b3c112e9435ab2b1d811062fb1a02b44cc5abd183d4a87ede9d711f6d0308d142b58e8c508714874c233be1 WHIRLPOOL 4c81da249a7325c41ccf56a7db9214fa5562665800f469341be5b5566ae0af3c306420ad526d20e38105d9992eb73285d4c80c494e2e0f014fb5c7d9c6e3afd3
 DIST tlp-gentoo-additions-0.5-r1.tar.bz2 2907 SHA256 740f1b41a62fef3411bb30883e6226c0e8909efda04f969a603ffa0a1f631d5f SHA512 0afadf04499c7ab707923e08cbb61d226c38b61b3375b5a8c21efe4225207219057ef8838718190045f1dbfee08a2bf13e3af6f8e42f8fcf56a9856d20f5a2d2 WHIRLPOOL 75c11ea8b2b761b1174c4bcb76913ebdaf488afc9565e698c6efd760a0e2eba74c092ed9043a05f5050829468dc03ecfe3e747077b5c2b6dbadeb74b47b9e809
 DIST tlp-gentoo-additions-0.5.tar.bz2 2494 SHA256 5511afd48173014375f46fdf5652faf3926f789091017f458ff892f307e87018 SHA512 c634c374ed0f552723ae09681cf670d649c75d62097cd72eef8a4bd240f7efeb803f10ab6feedeae81742cbeebd1aef265a1ed917bda6de1bb38cc47ce58c983 WHIRLPOOL 57dfb12c44249fabe836302e48a0ce6b75d9e007ae8d3164cef2b8622ffbffee951b1460aa7bdaed9cbc3f7e85229dce0f1edb72b1c161ec7c939b97d4f3cc71
 DIST tlp-gentoo-patches-0.5-r2.tar.xz 2736 SHA256 8183c08434509ec3a0726dab10a6811334343e0a0631914b804ed0cff5b10560 SHA512 16c3c7cafcefefe44d8f0bb3214bec82239129dfdf2932a268619f2d0e2cfb57f378ed30ac417825879f51c14d6384ebe332aac7a098d55a8741e67b63febb2b WHIRLPOOL 97a1e5fd9ada7ac5e8aa056be10b4699d4057991b626a44bd5cd924137e6b434ead684a189934472be178d99966c5c50af366b24cc3a2d095b954b9b8c276cb1
+DIST tlp-gentoo-patches-0.6.tar.xz 2676 SHA256 da9532945c19d9be7d8b55e4d22fba6101cab2385f591797b3e0a2eca869e9ff SHA512 b9ad6c34781f27e8619af1fa119e2de7034fab415935390e759f127d018a747c16a6da33ffb4a2d1f435874877d454ce1fb22614e90e424a4525943aaf891a4b WHIRLPOOL f665bd0926756b028a5b3d7f6099813dc849fd08e6cfa6401737607a382d0d5a02d87827b93d20fd77f02f4259d77cab9061b0af104780f2c2dfe68f119c7073
 EBUILD tlp-0.4-r1.ebuild 6379 SHA256 3b25dd526f38530cbdad1fbc2b04cbf7200aef5de5f84127a90de827ee4aa268 SHA512 f29df7ed230dec5c9c01057cbad3253b81b6ae3ed2dc2bc444c819812fdd704c118817b2b8a39093bc8a73d075a9e5a247545431aa92abe21e13ee750013ac09 WHIRLPOOL 5359a8db9d12e81e2db512a5fc683ec7020a93120622b695fcac000226b0510889db93b678c21b8dd47d0e99295648d9cf205a88d34e5fe5c5d268172776e375
 EBUILD tlp-0.4.1.ebuild 6340 SHA256 35b05318ef7b3bac6ce6f4a195bd903a6d40debfac1b20bd2db67d1357b45c56 SHA512 64e4ab8674531acde122d633d4743283fcf5b1861d56a8d5356a570e52bae591fd033bd50136660b5cc89d0553532365a1e1577235fb90ebe42bad6ebfc02ddd WHIRLPOOL d99c8f56a895c0f98fec32f0d27353111a2ea38846881c91f47189c442357475b7d5930e70b0e6026a234323d1acac979ff2d63c9ff730cb5f66372ee08d8579
 EBUILD tlp-0.4.ebuild 5837 SHA256 ce9bb9fd43023fe360f3821cbd48062b56e2cdc748d1bcbb392e6b0baad0626e SHA512 ec101176557fb9bd849523d32f589d1aeadf33d5d527ec18e5c773a6deb04e31e328c917294588fae7edc0276cbcc6e447bc0da0464251fa3e38979647b6bdb6 WHIRLPOOL 95518bd05acef1319aef51b3b03ed89b912c3325a13c54f7247a3a4ed38def1196b6ba73038ed1b9c6aa0272d4944925abe6da36b40beb79654f801b56998706
 EBUILD tlp-0.5-r1.ebuild 4719 SHA256 f3486c4049dc5e794c8e66a917a3477ec269c5a39519637e2dd9e6acbc25fe08 SHA512 3af8b40687700aee1568bfaa75f70eb24b4d93a60cd1bebd6ce51b18449d18c2b625bf956c2cb9de68e73c84c847dcb5eaf64bad54ee1b39e3022f6245c25bca WHIRLPOOL 2b79d0fee5ebe86ad334bf4f134249b611bc246d0ddb36de71ba072903f8630244a1a0c1327f82af614c08cbef59fc9713cedeb5d699865482702d2010dd257b
 EBUILD tlp-0.5-r2.ebuild 5180 SHA256 28df4bdbe8f5ef985c6bf2e5b218a381e4d366f85a7967ec31aab33cdba721d8 SHA512 327b2834d6ac50aa7ac73158264c43122941a68098fe3b5e069a35c12cb9e8c8ac78823006295ae9b9d404689c2d2c5d01ca773909c28f340930a50e0fae489e WHIRLPOOL 4acf2f387b9b85f3c5becb365d684f355ffeae480a6f78c84a09ac24d096008544590992290e92cd9ad113bfb76feddc5aad72e403cd84ba41a7c7c3450aa71e
 EBUILD tlp-0.5.ebuild 4322 SHA256 8d92d603adaafd810d4b48d7aade4aa678a5e88f6a4eae43e271e1c7ccb6e18f SHA512 9d53e830c792350b44cf6987fb3a9c73fc0de65ebb472357ba6302e01f700e4c5658eefad8ea2e28d68ff52c5896052cb3469b4208371b7b83a7088be1fc17c6 WHIRLPOOL 1bc12403333b32ac19dec7ff0f193779ccab588a8b4d2dd748eec505e2033dddf2ea5e86407745cea7089af4b706d07a1deaca4ac5e7707e50378115ed2d1ad0
-EBUILD tlp-9999.ebuild 5710 SHA256 9ba15a1d7e66e2c597cc42adc3a1867be56bfb20199c84d747e9d04f6d9ef0d6 SHA512 165eb0b8ad2f305538f02efd0060c687cccf9aa132dd91f4174b9ca3e96a484889c2b24c020115222afa37956c5c6aa8d3c2fa8fcd9ac0a27eb1908d98bcff21 WHIRLPOOL 514304e31f48f5911815b46fef3254f7c91b2aaa7f277534c4332baf0789dcdc3236163c39a375a47de97c685be49e3bb6ad719fa375e39f4814c6b42193c345
-MISC ChangeLog 9968 SHA256 1db0b762f2741b8ad0f212b5aeab03d987f8a9e89ecb598157825cc90b02d8bc SHA512 8b4ee38fcbe702e8103791c2dc3d6c4dad2aa22fcec5e60a77c79dc84f20d2973515059b0b36fda5fd4ca8502f6d427a9f65021cd5d706e05017e25634259f12 WHIRLPOOL d06e3fdd417732c0b27d2c18b752028579e350f278839b0bbe0937a8a6bdae328d4ae69e2b7e789486c6ac7f8fcd65a4ab6f6106546d2e6edda318c910e3312a
+EBUILD tlp-0.6.ebuild 5113 SHA256 317dacdc1c96d87556aac31e8baf7938d0ea9a35d9abc3da911149cf50fe13ee SHA512 9fe2b2f99b8e3e265e677ff3fc0ea96a4e31834d3566398454f5f8dd3b7ec260493dc6bd57541269dff548c1ec8440d3b0613fa1690e5d143b48d3fbc783fba2 WHIRLPOOL ffeac38d48ce9bda251e46f6272542498f87750701692a21df0129f49a0af1d3114ff82ad83f3934002446f846c369f905bfdd4c16ef62b524dde4941643b569
+EBUILD tlp-9999.ebuild 5731 SHA256 43eeffdf0da203fbf7e22872410a6945045ddfda82fb678e77fb923adb1f8f57 SHA512 dee4bb3d35a61b2ba4dbcef566e184e75b6737723e291f8e7e60449c12fda4c43a69811c4d17d4a3d670bf2181a8c64ffa067b1a36eda1da93e9a80b69802a76 WHIRLPOOL c544d5637c778d8191336fe4b6058943da2610ba0930b35708f4ed53f4085e7a7defb9211c5591311a37b2f5de460994c843b79be0337d4f62ac4392809ae9f3
+MISC ChangeLog 10176 SHA256 782706c78e29ff60242a064ed6ecbc14e10d93c84c4c772dd1a1986903033ace SHA512 7ef09595e8d2a51834a8e3199ea33550f14f3369a285407cbf2abc954d68971917464cdbfeee757f6a20a682eceb21ed7829961951c3d941c818e196266366b1 WHIRLPOOL 026182eb84a6f53e76ef3083549765cae7cbb92fc9e927032addece88574210cc606ea6607a1b289e581185a8410513215d9deb0804a8860b748bc4838d6f2a7
 MISC metadata.xml 2089 SHA256 1e283f1d356f8c38c0f95a16bf3dc7a769834d7a0d9ba9986c327917afc1cfb6 SHA512 e5cd0ca0f6d16c601f83755ac0ef9d509aa454a802c867a4550631130754c719bb1de36ce2f3283ab8bf4ca9177358260d7d7005a15fcaa64a580e681fc7229b WHIRLPOOL 64f5fd3213fa0552d8b5128a06a78e60c04111b50bacbff57dbaa1a92e2a47f51858dc5f6cd6735c5f0be61ab6c10d8c4c9ae7872bc21a4f6e34d14c03edfacc
