@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*tlp-0.6 (07 Oct 2014)
+
+  07 Oct 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.6.ebuild, tlp-9999.ebuild
+  Latest upstream release.
+  Added runtime dep on sys-apps/util-linux (though part of the system set).
+
   24 Sep 2014; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild
   - use $MY_CONFFILE in pkg_preinst()
   - use TLP_WITH_SYSTEMD
